--- a/frontend/src/containers/Home.css
+++ b/frontend/src/containers/Home.css
@@ -1,12 +1,12 @@
 .home-landscape {
     max-width: 100%;
-    max-height: 100%;
+    height: auto;
 }
 
 .layout-light .home .home-landscape {
-    content: url('Wildlife.jpg');   
+    content: url('images/Wildlife.jpg');   
 }
 
 .layout-dark .home .home-landscape {
-    content: url('Night.jpg');
+    content: url('images/Evening.jpg');
 }
