--- a/frontend/src/layout/Layout.css
+++ b/frontend/src/layout/Layout.css
@@ -7,17 +7,6 @@ body {
     height: 100%;
 }
 
-/* .footer {    
-    margin-top: 32px;
-    padding: 0;                           
-    min-height: 200px;
-    width: 100%;    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center; 
-} */
-
 .layout-light {
     background-color: #f0f2f5;
     color: rgba(0, 0, 0, 0.85);
@@ -75,150 +64,17 @@ body {
 .layout-light .ant-typography,
 .layout-light .ant-card-meta-title,
 .layout-light .ant-card-meta-description,
-.layout-light .ant-card-head-title {    
+.layout-light .ant-card-head-title,
+.layout-light .ant-list-item-meta-title a,
+.layout-light .ant-list-item-meta-description {    
     color: rgba(0, 0, 0, 0.85);
 }
 
 .layout-dark .ant-typography,
 .layout-dark .ant-card-meta-title,
 .layout-dark .ant-card-meta-description,
-.layout-dark .ant-card-head-title {
+.layout-dark .ant-card-head-title,
+.layout-dark .ant-list-item-meta-title a,
+.layout-dark .ant-list-item-meta-description {
     color: rgba(255, 255, 255, 0.85);
 }
-
-/* .ant-btn-ghost:hover {
-    color: #1890ff;
-    border-color:#1890ff;
-    background:rgba(24, 144, 255, 0.2);
-} */
-
-
-/* .header {
-    display: inline-block;
-    z-index: 99;
-    position: relative;
-    padding: 0;
-    transition: background-color 0.3s ease-out;
-    height: 80px;
-    background: transparent;
-} */
-
-/* .layout-light .header,
-.layout-light div.container,
-.layout-light .ant-dropdown {
-    background-color: #fff;
-    color:  rgba(0, 0, 0, 0.85);
-}
-
-.layout-dark .header,
-.layout-dark div.container {
-    background-color: #161b22;
-    color: rgba(255, 255, 255, 0.85);
-}
-
-.layout-light .header .menu {
-    background-color: #fff;
-}
-
-.layout-dark .header .menu {
-    background-color: #161b22;
-}
-
-.layout-light form {
-    background-color: #fff;
-    color: rgba(0, 0, 0, 0.85);
-    border: 1px solid #000;
-}
-
-.layout-dark form {
-    background-color: #0d1117;
-    color: rgba(255, 255, 255, 0.85);
-    border: 1px solid #fff;
-}
-
-.layout-light .ant-form-item,
-.layout-light .ant-input-affix-wrapper,
-.layout-light .ant-input,
-.layout-light .ant-pagination-item,
-.layout-light .ant-pagination-item a,
-.layout-light .ant-pagination-item-link,
-.layout-light .ant-picker,
-.layout-light .ant-picker-input,
-.layout-light .ant-picker-input > input {
-    background-color: #fff;
-    color: rgba(0, 0, 0, 0.85);
-}
-
-.layout-dark .ant-form-item,
-.layout-dark .ant-input-affix-wrapper,
-.layout-dark .ant-input,
-.layout-dark .ant-pagination-item,
-.layout-dark .ant-pagination-item a,
-.layout-dark .ant-pagination-item-link,
-.layout-dark .ant-picker,
-.layout-dark .ant-picker-input,
-.layout-dark .ant-picker-input > input {
-    background-color: #0d1117;
-    color: rgba(255, 255, 255, 0.85);
-}
-
-.layout-light .ant-typography,
-.layout-light label,
-.layout-light .ant-divider-inner-text,
-.layout-light .ant-result-title,
-.layout-light .ant-tabs,
-.layout-light .ant-breadcrumb-link,
-.layout-light .ant-breadcrumb-separator,
-.layout-light .ant-picker-dropdown {
-    color: rgba(0, 0, 0, 0.85);
-}
-
-.layout-light .ant-breadcrumb a,
-.layout-light .ant-result-subtitle {
-    color: rgba(0, 0, 0, 0.45);
-}
-
-.layout-dark .ant-typography,
-.layout-dark label,
-.layout-dark .ant-divider-inner-text,
-.layout-dark .ant-result-title,
-.layout-dark .ant-tabs,
-.layout-dark .ant-breadcrumb-link,
-.layout-dark .ant-breadcrumb-separator,
-.layout-dark .ant-picker-dropdown {
-    color: rgba(255, 255, 255, 0.85);
-}
-
-.layout-dark .ant-breadcrumb a,
-.layout-dark .ant-result-subtitle {
-    color: rgba(255, 255, 255, 0.45);
-}
-
-.layout-light .ant-divider {
-    border-top-color: rgba(0, 0, 0, 0.1);
-}
-
-.layout-dark .ant-divider {
-    border-top-color: rgba(255, 255, 255, 0.1);
-} */
-
-/* .footer {
-    text-align: center;
-    padding: 0;
-    min-height: 20vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
-
-/* .layout-light .footer,
-.layout-light .footer .ant-btn {
-    background-color: #fff;
-    color:  rgba(0, 0, 0, 0.85);
-}
-
-.layout-dark .footer,
-.layout-dark .footer .ant-btn {
-    background-color: #161b22;
-    color: rgba(255, 255, 255, 0.85);
-} */
